# circle-guard-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
circleguardbench/: __init__.py  cli.py  context.py  evaluator.py  leaderboard.py  models_config.py
circleguardbench/providers/: __init__.py  model_providers.py  registery.py  utils.py
circleguardbench/storage/: __init__.py  leaderboard.py  objects.py  results.py
configs/: models.json
prompts/: answer_eval_regexp.jinja  answer_eval_so.jinja  atla_answer_eval.jinja  atla_prompt_eval.jinja  cot_answer_eval_regexp.jinja  cot_answer_eval_so.jinja  cot_prompt_eval_regexp.jinja  cot_prompt_eval_so.jinja  default_answer_eval.jinja  default_prompt_eval.jinja  prompt_eval_regexp.jinja  prompt_eval_so.jinja
